--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         </button>
 
         <div class="copyright-footer-fixed">
-            Copyright © 2025 Yoni Brd. Tous droits réservés.<br>
-            Code source protégé. Reproduction interdite.
+            Copyright © 2025 Yoni Brd. All rights reserved.<br>
+            Source code protected. Unauthorized reproduction or distribution is strictly prohibited.
         </div>
     </div>
 
@@ -852,3 +852,4 @@
     </script>
 </body>
 </html>
+
