--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
         </button>
 
         <div class="copyright-footer-fixed">
-            Copyright © 2025 Yoni Brd. Tous droits réservés.<br>
-            Code source protégé. Reproduction interdite.
+            Copyright © 2026 Yoni Brd. All rights reserved.<br>
+            Source code protected. Unauthorized reproduction prohibited.
         </div>
     </div>
 
