--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <source src="data:audio/mp3;base64,//MkxAA........" type="audio/mpeg">
     </audio>
 
-    <!-- DISCLAIMER (RETOUR TEXTE ORIGINAL YONI) -->
+    <!-- DISCLAIMER -->
     <div id="screen-disclaimer" class="absolute inset-0 z-50 bg-black flex flex-col items-center justify-center p-8 text-center">
         <div class="absolute top-4 left-4 text-xs text-gray-600 font-display opacity-50">By Y.B</div>
         <h1 class="text-4xl text-red-600 font-display mb-6 drop-shadow-[0_0_10px_rgba(255,0,0,0.5)]">ATTENTION</h1>
@@ -208,15 +208,15 @@
     <!-- MENU PRINCIPAL -->
     <div id="screen-menu" class="w-full h-full flex flex-col p-4 hidden-force pt-8">
         
-        <!-- HEADER: AGRANDI ET ALIGNÉ SUR LES CASES -->
+        <!-- HEADER -->
         <div class="flex flex-col items-center mb-4 mt-2 w-full max-w-md mx-auto">
-            <!-- MODIF YONI: Taille ajustée (text-4xl start) pour garantir une seule ligne sur mobile -->
             <h2 class="text-4xl sm:text-6xl md:text-7xl font-display text-white tracking-widest drop-shadow-lg text-center leading-none w-full whitespace-nowrap px-2">IRON TIMER</h2>
             
             <div class="mt-3 mb-1">
-                <button id="btn-sound-global" onclick="app.toggleSound()" class="btn-sound active">
-                    <span class="text-base">🔊</span>
-                    <span id="label-sound-global">SON : ON</span>
+                <!-- Bouton SON: OFF par défaut -->
+                <button id="btn-sound-global" onclick="app.toggleSound()" class="btn-sound">
+                    <span class="text-base">🔇</span>
+                    <span id="label-sound-global">SON : OFF</span>
                 </button>
             </div>
         </div>
@@ -412,7 +412,8 @@
         };
 
         const app = {
-            state: { currentScreen: 'screen-disclaimer', mode: null, config: {}, running: false, paused: false, phase: 'ready', timeLeft: 0, totalTime: 0, currentSet: 1, intervalId: null, elapsedTime: 0, laps: [], lafayAction: null, soundEnabled: true },
+            // Changement ici: soundEnabled: false
+            state: { currentScreen: 'screen-disclaimer', mode: null, config: {}, running: false, paused: false, phase: 'ready', timeLeft: 0, totalTime: 0, currentSet: 1, intervalId: null, elapsedTime: 0, laps: [], lafayAction: null, soundEnabled: false },
             showScreen: function(screenId) {
                 document.querySelectorAll('body > div').forEach(el => {
                     if(el.id !== 'ios-audio-hack' && !el.classList.contains('copyright-footer-fixed') && el.id !== 'orientation-lock-screen') el.classList.add('hidden-force');
@@ -435,7 +436,6 @@
             },
             acceptDisclaimer: function() {
                 localStorage.setItem('iron-timer-accepted', 'true');
-                if(this.state.soundEnabled) AudioEngine.init();
                 if (document.documentElement.requestFullscreen) {
                     document.documentElement.requestFullscreen().then(() => {
                         if (screen.orientation && screen.orientation.lock) screen.orientation.lock('portrait').catch(e => console.log('Lock failed', e));
@@ -910,4 +910,3 @@
     </script>
 </body>
 </html>
-
