--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>IRON TIMER - Tactical Training</title>
+    <title>IRON TIMER</title>
     <meta name="description" content="Application de chronométrage sportif haute visibilité.">
     
     <!-- CONFIGURATION ICONE -->
@@ -907,3 +907,4 @@
     </script>
 </body>
 </html>
+
